--- a/GameServer/app/build.gradle
+++ b/GameServer/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.spacehackteam.wifitests"
+        applicationId "com.spacehackteam.gameserver"
         minSdkVersion 19
         targetSdkVersion 21
         versionCode 1
